force-app/main/default/objects/Apttus_AgreementParty__c/Apttus_AgreementParty__c.object-meta.xml
<CustomObject>
    <description>This object will hold information about each party&#39;s role in the agreement especially in multicontractual agreements.</description>
    <label>Agreement Party</label>
    <nameField>
        <label>Agreement Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>