force-app/main/default/objects/Apttus_AgreementParty__c/fields/chk_PrimaryParty__c.field-meta.xml
<CustomField>
    <fullName>chk_PrimaryParty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The main customer or main ETAS entity for reporting or integration purposes, which can be very useful</description>
    <inlineHelpText>Please, mark the the main ETAS entity/customer/supplier/partner</inlineHelpText>
    <label>Primary Party</label>
    <type>Checkbox</type>
</CustomField>