force-app/main/default/objects/Apttus_AgreementParty__c/fields/dat_MultyPartySignedDate__c.field-meta.xml
<CustomField>
    <fullName>dat_MultyPartySignedDate__c</fullName>
    <description>The date and the time when the agreement was signed by the contact which represents the contractual party</description>
    <inlineHelpText>The date and the time when the agreement was signed by the contact which represents the contractual party</inlineHelpText>
    <label>Multy Party Signed Date</label>
    <type>Date</type>
</CustomField>