force-app/main/default/objects/Apttus_AgreementParty__c/fields/lkp_AgreementParty__c.field-meta.xml
<CustomField>
    <fullName>lkp_AgreementParty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreement Party Name</relationshipLabel>
    <relationshipName>Agreement_Party</relationshipName>
    <type>Lookup</type>
</CustomField>