force-app/main/default/objects/Apttus_AgreementParty__c/fields/lkp_MultiPartySignedBy__c.field-meta.xml
<CustomField>
    <fullName>lkp_MultiPartySignedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A relation to the Contacts which will show who had signed the agreement from customer end</description>
    <label>Multi Party Signed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreement Parties</relationshipLabel>
    <relationshipName>Agreement_Parties</relationshipName>
    <type>Lookup</type>
</CustomField>