force-app/main/default/objects/Apttus_AgreementParty__c/fields/mdr_Agreement__c.field-meta.xml
<CustomField>
    <fullName>mdr_Agreement__c</fullName>
    <description>Apttus Agreement</description>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Multiparty Agreements</relationshipLabel>
    <relationshipName>Multiparty_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>