force-app/main/default/objects/Apttus_AgreementParty__c/fields/pkl_MultyPartySignatureType__c.field-meta.xml
<CustomField>
    <fullName>pkl_MultyPartySignatureType__c</fullName>
    <description>Type of signature which the party mantioned - signing the agreement - will use</description>
    <label>Multy Party Signature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>eSignature</fullName>
                <default>true</default>
                <label>eSignature</label>
            </value>
            <value>
                <fullName>Wet Ink Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>