force-app/main/default/objects/Apttus_AgreementParty__c/fields/pkl_PartyRole__c.field-meta.xml
<CustomField>
    <fullName>pkl_PartyRole__c</fullName>
    <description>Agreement Party Role- including in a contract</description>
    <inlineHelpText>Agreement Party Role- including in a contract</inlineHelpText>
    <label>Party Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ETAS Legal Entity</fullName>
                <default>true</default>
                <label>ETAS Legal Entity</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>