force-app/main/default/objects/Apttus_AgreementParty__c/fields/txt_AgreementPartyDetails__c.field-meta.xml
<CustomField>
    <fullName>txt_AgreementPartyDetails__c</fullName>
    <description>In case the Account/ETAS entity is missing,the user should enter details with name and adress or any other useful information which will lead to the right legal entiry mantioned into the agreement</description>
    <inlineHelpText>Please, add the entity information if the right account is missing</inlineHelpText>
    <label>Agreement Party Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>